# bob_q3tts

./: .dockerignore  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml  requirements.txt
.github/workflows/: docker-image.yml  ros-ci.yml
bob_q3tts/: __init__.py  gui_node.py  setup.cfg  tts_node.py
config/: q3tts_params.yaml  voice_ref_text.txt  voice_ref_text_en.txt
