# Copyright 2026 Bob Ros
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[develop]
script_dir=$base/lib/bob_q3tts
[install]
install_scripts=$base/lib/bob_q3tts
[options.entry_points]
console_scripts =
    tts = bob_q3tts.tts_node:main
    gui = bob_q3tts.gui_node:main
